--- a/Thesis/Thesis.Web/Content/constants.scss
+++ b/Thesis/Thesis.Web/Content/constants.scss
@@ -13,6 +13,7 @@ $color_nav: #721549;
 $color_tile_title: #424242;
 $color_icon: $color_nav;
 $color_network_background: #f6f6f6;
+$color_node: #f5cbee;
 
 /*fonts*/
 $base_font_size: 14px;
