--- a/Thesis/Thesis.Web/Content/custom.css
+++ b/Thesis/Thesis.Web/Content/custom.css
@@ -12,6 +12,13 @@ body {
   left: 34%;
   padding-top: 20px; }
 
+.container-buttons {
+  margin-top: 20px;
+  /* width: 100%; */
+  padding-bottom: 50px;
+  padding-left: 20%;
+  padding-right: 20%; }
+
 .container-graph {
   padding-left: 20%;
   padding-right: 20%;
@@ -60,7 +67,13 @@ h1, h2, h3, h4, h5, h6, p {
   margin-bottom: 10px;
   margin-right: 145px;
   margin-left: 25px;
-  background: #F2F2F2; }
+  background: #F2F2F2;
+  border-radius: 4px;
+  /*&:hover {
+        background: darken($color_tile, 30%);
+        text-decoration: none;
+        color: darken($color_tile_title, 10%);
+    }*/ }
   .tile .title {
     margin: 0 auto;
     width: 100%;
@@ -68,6 +81,23 @@ h1, h2, h3, h4, h5, h6, p {
     text-decoration: none !important;
     text-align: center; }
   .tile:hover {
+    background-color: #fff;
+    -webkit-box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.15);
+    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.15); }
+
+.tile-small {
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 20px;
+  margin-bottom: 10px;
+  background: #F2F2F2; }
+  .tile-small .title {
+    margin: 0 auto;
+    width: 100%;
+    color: #424242;
+    text-decoration: none !important;
+    text-align: center; }
+  .tile-small:hover {
     background: #a6a6a6;
     text-decoration: none;
     color: #292929; }
@@ -80,7 +110,7 @@ h1, h2, h3, h4, h5, h6, p {
     color: #292929; }
 
 .fas {
-  padding-left: 25px;
+  padding-left: 30%;
   color: #721549; }
 
 .btn-secondary {
@@ -92,4 +122,105 @@ h1, h2, h3, h4, h5, h6, p {
 .form-control:focus {
   border-color: #721549;
   box-shadow: none; }
+
+.blockOverlay {
+  background-color: #fff !important;
+  opacity: .7 !important;
+  z-index: 10000 !important; }
+
+.blockUI.blockMsg {
+  width: 64px !important;
+  height: 64px !important;
+  border: 5px solid #721549 !important;
+  background: none !important;
+  left: 0 !important;
+  right: 0 !important;
+  margin: 0 auto !important;
+  z-index: 10001 !important; }
+
+.page-loader {
+  color: #721549;
+  font-size: 120px;
+  line-height: 0;
+  font-weight: 200;
+  margin: 4px;
+  position: absolute;
+  top: 15px;
+  left: 0;
+  -webkit-animation: mainloading 2s ease-in-out infinite;
+  animation: mainloading 2s ease-in-out infinite;
+  -webkit-animation-delay: .3s;
+  animation-delay: .3s; }
+
+.page-loader:before {
+  content: '';
+  height: 31px;
+  width: 5px;
+  top: 0;
+  left: 13px;
+  position: absolute;
+  background-color: #721549; }
+
+.page-loader:after {
+  content: '';
+  height: 5px;
+  width: 31px;
+  top: 13px;
+  left: 0;
+  position: absolute;
+  background-color: #721549; }
+
+@-moz-keyframes mainloading {
+  0% {
+    top: 15px;
+    left: 0; }
+  25% {
+    top: 0;
+    left: 0; }
+  50% {
+    top: 0;
+    left: 15px; }
+  75% {
+    top: 15px;
+    left: 15px; }
+  100% {
+    top: 15px;
+    left: 0; } }
+
+@keyframes mainloading {
+  0% {
+    top: 15px;
+    left: 0; }
+  25% {
+    top: 0;
+    left: 0; }
+  50% {
+    top: 0;
+    left: 15px; }
+  75% {
+    top: 15px;
+    left: 15px; }
+  100% {
+    top: 15px;
+    left: 0; } }
+
+@-webkit-keyframes mainloading {
+  0% {
+    top: 15px;
+    left: 0; }
+  25% {
+    top: 0;
+    left: 0; }
+  50% {
+    top: 0;
+    left: 15px; }
+  75% {
+    top: 15px;
+    left: 15px; }
+  100% {
+    top: 15px;
+    left: 0; } }
+
+.btn {
+  width: 110%; }
 
