--- a/Thesis/Thesis.Web/Views/Home/Index.cshtml
+++ b/Thesis/Thesis.Web/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
     <div class="container-tiles">
         <div class="row">
             <div class="col-sm-2">
+                
                 <a class="tile-link" href="/TeamMembersEmailGraphs/Index">
                     <div class="tile">
                         <i class="fas fa-users fa-3x"></i>
@@ -16,25 +17,28 @@
                 </a>
             </div>
             <div class="col-sm-2">
-                <a href="#">
+                <a class="tile-link" href="/TeamMembersEmailGraphs/Index">
                     <div class="tile">
+                        <i class="fas fa-upload fa-3x"></i>
                         <h3 class="title">
-                            First Tile
+                            Upload own emails
                         </h3>
                     </div>
                 </a>
             </div>
             <div class="col-sm-2">
-                <a href="#">
+                <a class="tile-link" href="/TeamMembersEmailGraphs/Index">
                     <div class="tile">
+                        <i class="fas fa-download fa-3x"></i>
                         <h3 class="title">
-                            First Tile
+                            Download your emails
                         </h3>
                     </div>
                 </a>
             </div>
         </div>
     </div>
+    
 </div>
 
 
