--- a/Thesis/Thesis.Web/Content/custom.css
+++ b/Thesis/Thesis.Web/Content/custom.css
@@ -5,19 +5,13 @@ body {
   font-size: 14px;
   font-weight: 400;
   color: #484848;
-  padding: 0; }
+  padding: 0;
+  height: 2000px; }
 
 .container-tiles {
   position: fixed;
   left: 34%;
   padding-top: 20px; }
-
-.container-buttons {
-  margin-top: 20px;
-  /* width: 100%; */
-  padding-bottom: 50px;
-  padding-left: 20%;
-  padding-right: 20%; }
 
 .container-graph {
   padding-left: 20%;
@@ -222,5 +216,6 @@ h1, h2, h3, h4, h5, h6, p {
     left: 0; } }
 
 .btn {
-  width: 110%; }
+  width: 110%;
+  margin-top: 20px; }
 
