--- a/Thesis/Thesis.Web/Views/Shared/_Layout.cshtml
+++ b/Thesis/Thesis.Web/Views/Shared/_Layout.cshtml
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Thesis - UHR0019</title>
     
+    @*jQuery scripts*@
+    <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/jquery-ui.js" type="text/javascript"></script>
+    <script src="~/Scripts/jqueryblockUI.js"></script>
+    <script src="~/Scripts/popper.min.js"></script>
+    
+
     <link rel="stylesheet" href="~/Content/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="~/Content/vis/vis-network.min.css" type="text/css" />
     <link rel="stylesheet" href="~/Content/fontawesome/fontawesome-all.css" type="text/css">
     <link rel="stylesheet" href="~/Content/custom.css" type="text/css">
+    <link rel="stylesheet" href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/themes/blitzer/jquery-ui.css"  type="text/css" />
     
-    @*custom scripts*@
-    <script src="~/Scripts/custom.js"></script>
-    
-    @*jQuery scripts*@
-    <script src="~/Scripts/jquery-1.10.2.js"></script>
-    <script src="~/Scripts/jqueryblockUI.js"></script>
-    <script src="~/Scripts/popper.min.js"></script>
-    
-   
+
     @*vis scripts*@
     <script src="~/Scripts/vis/vis.js"></script>
     <script src="~/Scripts/vis/vis-network.min.js"></script>
@@ -27,12 +27,10 @@
     <script src="~/Scripts/bootstrap.js"></script>
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
     <script src="~/Scripts/respond.js"></script>
+
     
-    
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/jquery-ui.js" type="text/javascript"></script>
-    <link href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/themes/blitzer/jquery-ui.css"
-          rel="stylesheet" type="text/css"/>
+    @*custom scripts*@
+    <script src="~/Scripts/custom.js"></script>
 </head>
 <body>
     <nav>
