--- a/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/Index.cshtml
+++ b/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/Index.cshtml
@@ -18,6 +18,7 @@
     $(document).ready(function () {
        
         $("#teamMembersDropdown").change(function (e) {
+            blockUI();
             e.preventDefault();
             var teamMemberId = $(this).find(":selected").val();
             var selectid = { "teamMemberId": teamMemberId };
@@ -29,6 +30,7 @@
                 contentType: 'application/json; charset=utf-8',
                 success: function (partialView) {
                     $('#graphView_Partial_Id').html(partialView);
+                    unblockUI();
                 }
             });
             return false;
