--- a/Thesis/Thesis.Web/Content/constants.scss
+++ b/Thesis/Thesis.Web/Content/constants.scss
@@ -14,6 +14,9 @@ $color_tile_title: #424242;
 $color_icon: $color_nav;
 $color_network_background: #f6f6f6;
 $color_node: #f5cbee;
+$color_xml_import: #fcfcfc;
+$color_xml_import_border: #e2e2e2;
+$color_xml_import_label: #646464;
 
 /*fonts*/
 $base_font_size: 14px;
