--- a/Thesis/Thesis.Web/Views/Home/Index.cshtml
+++ b/Thesis/Thesis.Web/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                 </a>
             </div>
             <div class="col-sm-2">
-                <a class="tile-link" href="/TeamMembersEmailGraphs/Index">
+                <a class="tile-link" href="/ImportXMLFile/Index">
                     <div class="tile">
                         <i class="fas fa-upload fa-3x"></i>
                         <h3 class="title">
@@ -27,7 +27,7 @@
                 </a>
             </div>
             <div class="col-sm-2">
-                <a class="tile-link" href="/TeamMembersEmailGraphs/Index">
+                <a class="tile-link" href="/EmailDownload/Index">
                     <div class="tile">
                         <i class="fas fa-download fa-3x"></i>
                         <h3 class="title">
