--- a/Thesis/Thesis.Web/Views/Shared/_Layout.cshtml
+++ b/Thesis/Thesis.Web/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     
 
     <link rel="stylesheet" href="~/Content/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="~/Content/inputfile.css" type="text/css">
     <link rel="stylesheet" href="~/Content/vis/vis-network.min.css" type="text/css" />
     <link rel="stylesheet" href="~/Content/fontawesome/fontawesome-all.css" type="text/css">
     <link rel="stylesheet" href="~/Content/custom.css" type="text/css">
