--- a/Thesis/Thesis.Web/Content/custom.css
+++ b/Thesis/Thesis.Web/Content/custom.css
@@ -13,6 +13,29 @@ body {
   left: 34%;
   padding-top: 20px; }
 
+.importDataTile {
+  height: 300px;
+  background: #fcfcfc;
+  margin: 20px;
+  border-style: dashed;
+  border-color: #e2e2e2;
+  border-radius: 3px;
+  margin-right: 20%;
+  margin-left: 20%;
+  border-width: 2px; }
+  .importDataTile .btn {
+    width: 200px;
+    margin-left: 43%;
+    color: #646464;
+    border: solid 1px;
+    border-color: #721549;
+    background: #faf7f7; }
+    .importDataTile .btn:hover {
+      background: #f1e5e6; }
+  .importDataTile .box {
+    margin-left: 25%;
+    margin-top: 11%; }
+
 .container-graph {
   padding-left: 20%;
   padding-right: 20%;
@@ -62,12 +85,7 @@ h1, h2, h3, h4, h5, h6, p {
   margin-right: 145px;
   margin-left: 25px;
   background: #F2F2F2;
-  border-radius: 4px;
-  /*&:hover {
-        background: darken($color_tile, 30%);
-        text-decoration: none;
-        color: darken($color_tile_title, 10%);
-    }*/ }
+  border-radius: 4px; }
   .tile .title {
     margin: 0 auto;
     width: 100%;
