--- a/Thesis/Thesis.Web/Content/custom.scss
+++ b/Thesis/Thesis.Web/Content/custom.scss
@@ -15,6 +15,40 @@ body {
     padding-top: 20px;
 }
 
+.importDataTile {
+    height: 300px;
+    background: #fcfcfc;
+    margin: 20px;
+    border-style: dashed;
+    border-color: #e2e2e2;
+    border-radius: 3px;
+    margin-right: 20%;
+    margin-left: 20%;
+    border-width: 2px;
+
+    .btn {
+        width: 200px;
+        margin-left: 43%;
+        color: #646464;
+        border: solid 1px;
+        border-color: #721549;
+        background: #faf7f7;
+
+        &:hover {
+            background: #f1e5e6;
+        }
+    }
+
+
+
+    .box {
+        margin-left: 25%;
+        margin-top: 11%;
+    }
+}
+
+
+
 .container-graph {
     padding-left: 20%;
     padding-right: 20%;
@@ -93,11 +127,6 @@ h1, h2, h3, h4, h5, h6, p {
         -webkit-box-shadow: 1px 2px 10px rgba(0,0,0,.15);
         box-shadow: 1px 2px 10px rgba(0,0,0,.15);
     }
-    /*&:hover {
-        background: darken($color_tile, 30%);
-        text-decoration: none;
-        color: darken($color_tile_title, 10%);
-    }*/
 }
 
 .tile-small {
