--- a/Thesis/Thesis.Web/Content/custom.css
+++ b/Thesis/Thesis.Web/Content/custom.css
@@ -41,6 +41,24 @@ body {
   padding-right: 20%;
   padding-top: 50px; }
 
+.container-download {
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-top: 50px; }
+  .container-download .btn {
+    width: 100px;
+    background: #e3e3e3; }
+    .container-download .btn:hover {
+      background: #cacaca; }
+
+.download-form {
+  padding: 15px !important;
+  background: #fcfcfc; }
+
+.server-conf-label {
+  color: #721549;
+  font-size: 18px; }
+
 .graph-network {
   width: 100%;
   height: 600px;
