--- a/Thesis/Thesis.Web/Views/EmailDownload/Index.cshtml
+++ b/Thesis/Thesis.Web/Views/EmailDownload/Index.cshtml
@@ -3,7 +3,36 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container-fluid">
-
+<div class="container-download">
+    <form class="download-form">
+        <label class="server-conf-label"> IMAP SERVER CONFIGURATION</label>
+        <div class="form-group">
+            <label for="InputEmail">Email address</label>
+            <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+            <label for="InputUserName">User name</label>
+            <input type="text" class="form-control" id="InputUserName" placeholder="Enter username">
+        </div>
+        <div class="form-group">
+            <label for="InputPassword">Password</label>
+            <input type="password" class="form-control" id="InputPassword" placeholder="Password">
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-10">
+                <label for="InputServerAddress">User name</label>
+                <input type="text" class="form-control" id="InputServerAddress" placeholder="Enter server address">
+            </div>
+            <div class="form-group col-md-2">
+                <label for="InputPort">Port</label>
+                <input type="text" class="form-control" id="InputPort" aria-describedby="emailHelp" placeholder="143">
+            </div>
+        </div>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="SLLCheck">
+            <label class="SLLCheck-label" for="SLLCheck">Use secure connection (SSL)</label>
+        </div>
+        <button type="submit" class="btn btn-light">Submit</button>
+    </form>
 </div>
-
