--- a/Thesis/Thesis.Web/Views/EmailDownload/Index.cshtml
+++ b/Thesis/Thesis.Web/Views/EmailDownload/Index.cshtml
@@ -2,37 +2,47 @@
     ViewBag.Title = "title";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@model Thesis.Web.Models.EmailDownloadViewModel
 
 <div class="container-download">
-    <form class="download-form">
-        <label class="server-conf-label"> IMAP SERVER CONFIGURATION</label>
-        <div class="form-group">
-            <label for="InputEmail">Email address</label>
-            <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
-        <div class="form-group">
-            <label for="InputUserName">User name</label>
-            <input type="text" class="form-control" id="InputUserName" placeholder="Enter username">
-        </div>
-        <div class="form-group">
-            <label for="InputPassword">Password</label>
-            <input type="password" class="form-control" id="InputPassword" placeholder="Password">
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-10">
-                <label for="InputServerAddress">User name</label>
-                <input type="text" class="form-control" id="InputServerAddress" placeholder="Enter server address">
+    @using (@Html.BeginForm())
+    {
+        <form class="download-form">
+            <label class="server-conf-label"> IMAP SERVER CONFIGURATION</label>
+            <div class="form-group">
+                <div class="form-group">
+                </div>
+                @Html.LabelFor(model => model.Email, new {@for = "InputEmail" })
+                @Html.TextBoxFor(model => model.Email, new { @class = "form-control",@id = "InputEmail", @placeholder="Enter email", @inputmode = "email"})
+                @Html.ValidationMessageFor(model => model.Email)
             </div>
-            <div class="form-group col-md-2">
-                <label for="InputPort">Port</label>
-                <input type="text" class="form-control" id="InputPort" aria-describedby="emailHelp" placeholder="143">
+            <div class="form-group">
+                @Html.LabelFor(model => model.Username, new { @for = "InputUsername" })
+                @Html.TextBoxFor(model => model.Username, new { @class = "form-control", @id = "InputUsername", @placeholder = "Enter username" })
+                @Html.ValidationMessageFor(model => model.Username)
             </div>
-        </div>
-        <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="SLLCheck">
-            <label class="SLLCheck-label" for="SLLCheck">Use secure connection (SSL)</label>
-        </div>
-        <button type="submit" class="btn btn-light">Submit</button>
-    </form>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Password, new { @for = "InputPassword" })
+                @Html.TextBoxFor(model => model.Password, new { @class = "form-control", @id = "InputPassword", @placeholder = "Enter password", @inputmode = "password" })
+                @Html.ValidationMessageFor(model => model.Password)
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-10">
+                    @Html.LabelFor(model => model.ServerAddress, new {@for = "InputServerAddress" })
+                    @Html.TextBoxFor(model => model.ServerAddress, new { @class = "form-control",@id = "InputServerAddress", @placeholder="Enter server address", @inputmode = "text"})
+                    @Html.ValidationMessageFor(model => model.ServerAddress)
+                </div>
+                <div class="form-group col-md-2">
+                    @Html.LabelFor(model => model.Port, new {@for = "InputPort" })
+                    @Html.TextBoxFor(model => model.Port, new { @class = "form-control",@id = "InputPort", @placeholder="143", @inputmode = "text"})
+                    @Html.ValidationMessageFor(model => model.Port)
+                </div>
+            </div>
+            <div class="form-check">
+                @Html.CheckBoxFor(model => model.UseSSL, new { @class = "form-check-input", @id = "InputUseSSL"})
+                @Html.LabelFor(model => model.UseSSL, new {@for = "InputUseSSL"})
+            </div>
+            <button type="submit" class="btn btn-light">Submit</button>
+        </form>
+    }
 </div>
