--- a/Thesis/Thesis.Web/Content/custom.css
+++ b/Thesis/Thesis.Web/Content/custom.css
@@ -53,11 +53,15 @@ body {
 
 .download-form {
   padding: 15px !important;
-  background: #fcfcfc; }
+  background: #fcfcfc;
+  border-radius: 4px; }
 
 .server-conf-label {
   color: #721549;
-  font-size: 18px; }
+  font-size: 18px;
+  text-align: center;
+  width: 100%;
+  padding: 20px; }
 
 .graph-network {
   width: 100%;
@@ -182,23 +186,23 @@ h1, h2, h3, h4, h5, h6, p {
   -webkit-animation-delay: .3s;
   animation-delay: .3s; }
 
-.page-loader:before {
-  content: '';
-  height: 31px;
-  width: 5px;
-  top: 0;
-  left: 13px;
-  position: absolute;
-  background-color: #721549; }
+.circle {
+  width: 100px;
+  height: 100px;
+  background: red;
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  border-radius: 50px; }
 
 .page-loader:after {
   content: '';
-  height: 5px;
+  height: 31px;
   width: 31px;
-  top: 13px;
   left: 0;
   position: absolute;
-  background-color: #721549; }
+  background-color: #721549;
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px; }
 
 @-moz-keyframes mainloading {
   0% {
