--- a/Thesis/Thesis.Web/Views/EmailDownload/Index.cshtml
+++ b/Thesis/Thesis.Web/Views/EmailDownload/Index.cshtml
@@ -5,10 +5,10 @@
 @model Thesis.Web.Models.EmailDownloadViewModel
 
 <div class="container-download">
-    @using (@Html.BeginForm())
+    @using (@Html.BeginForm("SubmitDownload", "EmailDownload", FormMethod.Post, new {@class = "download-form" }))
     {
         <form class="download-form">
-            <label class="server-conf-label"> IMAP SERVER CONFIGURATION</label>
+            <label class="server-conf-label"> EMAIL SERVER CONFIGURATION</label>
             <div class="form-group">
                 <div class="form-group">
                 </div>
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
                 @Html.LabelFor(model => model.Password, new { @for = "InputPassword" })
-                @Html.TextBoxFor(model => model.Password, new { @class = "form-control", @id = "InputPassword", @placeholder = "Enter password", @inputmode = "password" })
+                @Html.PasswordFor(model => model.Password, new { @class = "form-control", @id = "InputPassword", @placeholder = "Enter password", @inputmode = "password" })
                 @Html.ValidationMessageFor(model => model.Password)
             </div>
             <div class="form-row">
@@ -42,7 +42,16 @@
                 @Html.CheckBoxFor(model => model.UseSSL, new { @class = "form-check-input", @id = "InputUseSSL"})
                 @Html.LabelFor(model => model.UseSSL, new {@for = "InputUseSSL"})
             </div>
-            <button type="submit" class="btn btn-light">Submit</button>
+            <button id="submitButton" type="submit" class="btn btn-light">Submit</button>
         </form>
     }
 </div>
+
+<script>
+    $( "#submitButton" ).click(function() {
+        blockUI();
+    });
+    window.onload = function() {
+        unblockUI();
+    };
+</script>
