--- a/Thesis/Thesis.Web/Views/Shared/_Layout.cshtml
+++ b/Thesis/Thesis.Web/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="~/Content/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="~/Content/inputfile.css" type="text/css">
+    <link rel="stylesheet" href="~/Content/toastr.css" type="text/css">
     <link rel="stylesheet" href="~/Content/vis/vis-network.min.css" type="text/css" />
     <link rel="stylesheet" href="~/Content/fontawesome/fontawesome-all.css" type="text/css">
     <link rel="stylesheet" href="~/Content/custom.css" type="text/css">
@@ -32,6 +33,9 @@
     
     @*custom scripts*@
     <script src="~/Scripts/custom.js"></script>
+    
+    @*toastr*@
+    <script src="~/Scripts/toastr.js"></script>
 </head>
 <body>
     <nav>
@@ -48,9 +52,10 @@
         </ul>
     </nav>
 
-    <div class="container-fluid body-content">
-        @RenderBody()
-    </div>
+<div class="container-fluid body-content">
+    @Html.Partial("_Toastr")
+    @RenderBody()
+</div>
 
 </body>
 </html>
