--- a/Thesis/Thesis.Web/Content/custom.css
+++ b/Thesis/Thesis.Web/Content/custom.css
@@ -14,15 +14,13 @@ body {
   padding-top: 20px; }
 
 .importDataTile {
-  height: 300px;
+  height: 450px;
   background: #fcfcfc;
-  margin: 20px;
-  border-style: dashed;
-  border-color: #e2e2e2;
+  margin-top: 50px;
   border-radius: 3px;
   margin-right: 20%;
   margin-left: 20%;
-  border-width: 2px; }
+  padding-top: 50px; }
   .importDataTile .btn {
     width: 200px;
     margin-left: 43%;
@@ -35,6 +33,38 @@ body {
   .importDataTile .box {
     margin-left: 25%;
     margin-top: 11%; }
+
+.contactsTile {
+  height: 150px;
+  background: #fcfcfc;
+  margin-top: 50px;
+  border-radius: 3px;
+  margin-right: 20%;
+  margin-left: 20%;
+  padding-top: 15px;
+  font-size: 18px; }
+  .contactsTile .row {
+    margin-left: 20px; }
+
+.aboutTile {
+  height: 150px;
+  background: #fcfcfc;
+  margin-top: 50px;
+  border-radius: 3px;
+  margin-right: 20%;
+  margin-left: 20%;
+  padding-top: 15px;
+  font-size: 18px; }
+  .aboutTile .row {
+    margin-left: 20px; }
+
+.contact-label {
+  color: #721549;
+  font-size: 20px;
+  text-align: center;
+  width: 100%;
+  font-weight: 1000;
+  padding-bottom: 10px; }
 
 .container-graph {
   padding-left: 20%;
@@ -50,6 +80,14 @@ body {
     background: #e3e3e3; }
     .container-download .btn:hover {
       background: #cacaca; }
+
+.container-contacts {
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-top: 50px; }
+  .container-contacts .h2 {
+    text-align: center;
+    padding-top: 15px; }
 
 .download-form {
   padding: 15px !important;
