--- a/Thesis/Thesis.Web/Views/Home/About.cshtml
+++ b/Thesis/Thesis.Web/Views/Home/About.cshtml
@@ -1,7 +1,17 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="contactsTile">
+    <div class="contact-label">
+        @ViewBag.Title
+    </div>
+    <div class="row">
+        <div class="col">
+           Miesto pre slovensky abstrakt diplomovej prace
+        </div>
+        <div class="col">
+            Place for an english abstract of diploma thesis
+        </div>
+    </div>
+</div>
