--- a/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/GraphView_partial.cshtml
+++ b/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/GraphView_partial.cshtml
@@ -116,7 +116,10 @@
                 size: 10,
                 borderWidth: 1
             },
-            interaction: { hover: true }
+            interaction: { hover: true },
+            layout: {
+                improvedLayout: false
+            }
             //,physics: {
             //    stabilization: {
             //        enabled: true,
