--- a/Thesis/Thesis.Web/Content/custom.scss
+++ b/Thesis/Thesis.Web/Content/custom.scss
@@ -16,15 +16,13 @@ body {
 }
 
 .importDataTile {
-    height: 300px;
+    height: 450px;
     background: #fcfcfc;
-    margin: 20px;
-    border-style: dashed;
-    border-color: #e2e2e2;
+    margin-top: 50px;
     border-radius: 3px;
     margin-right: 20%;
     margin-left: 20%;
-    border-width: 2px;
+    padding-top: 50px;
 
     .btn {
         width: 200px;
@@ -38,10 +36,50 @@ body {
             background: #f1e5e6;
         }
     }
+
     .box {
         margin-left: 25%;
         margin-top: 11%;
     }
+}
+
+.contactsTile {
+    height: 150px;
+    background: #fcfcfc;
+    margin-top: 50px;
+    border-radius: 3px;
+    margin-right: 20%;
+    margin-left: 20%;
+    padding-top: 15px;
+    font-size:18px;
+    .row {
+        margin-left: 20px;
+    }
+}
+
+
+.aboutTile {
+    height: 150px;
+    background: #fcfcfc;
+    margin-top: 50px;
+    border-radius: 3px;
+    margin-right: 20%;
+    margin-left: 20%;
+    padding-top: 15px;
+    font-size: 18px;
+
+    .row {
+        margin-left: 20px;
+    }
+}
+
+.contact-label {
+    color: $color_nav;
+    font-size: 20px;
+    text-align: center;
+    width: 100%;
+    font-weight: 1000;
+    padding-bottom: 10px;
 }
 
 .container-graph {
@@ -62,6 +100,18 @@ body {
         &:hover {
             background: #cacaca;
         }
+    }
+}
+
+
+.container-contacts {
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 50px;
+
+    .h2 {
+        text-align: center;
+        padding-top: 15px;
     }
 }
 
@@ -245,8 +295,8 @@ h1, h2, h3, h4, h5, h6, p {
 
 .page-loader:after {
     content: '';
-    height: 31px;
-    width: 31px;
+    height: 26px;
+    width: 26px;
     left: 0;
     position: absolute;
     background-color: #721549;
