--- a/Thesis/Thesis.Web/Content/custom.css
+++ b/Thesis/Thesis.Web/Content/custom.css
@@ -294,8 +294,7 @@ h1, h2, h3, h4, h5, h6, p {
     left: 0; } }
 
 .btn {
-  width: 110%;
-  margin-top: 20px; }
+  width: 110%; }
 
 .dialog {
   height: 600px;
@@ -305,4 +304,24 @@ h1, h2, h3, h4, h5, h6, p {
   background-color: #FFFFC1;
   margin: 10px;
   border: 1px solid #ff6a00; }
+
+.mydatepicker {
+  position: relative;
+  padding-left: 0 !important; }
+  .mydatepicker .datepicker-icon {
+    position: absolute;
+    bottom: 12px;
+    left: 10px;
+    cursor: pointer; }
+
+.datepicker-dropdown {
+  top: 712px;
+  left: 576.5px;
+  right: auto;
+  display: block; }
+
+.datepicker-input {
+  width: 495px;
+  padding-left: 30px;
+  margin-bottom: 15px; }
 
