--- a/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/Index.cshtml
+++ b/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@model Thesis.Web.Models.GraphViewModel
+@model GraphViewModel
 
 <div class="container-graph">
     @if (Model.FileImported == false)
@@ -31,19 +31,47 @@
 
         $('#daterange').daterangepicker({
             "autoApply": true,
-            "startDate": "03/22/2018",
-            "endDate": "03/28/2018"
+            "startDate": "@Html.Raw(Model.FromDate?.Date.ToString("MM/dd/yyyy"))",
+            "endDate":  "@Html.Raw(Model.ToDate?.Date.ToString("MM/dd/yyyy"))"
+        });
+
+
+        $('#daterange').on('apply.daterangepicker', function (ev, picker) {
+
+            var data = JSON.stringify({
+                'from': picker.startDate,
+                'to': picker.endDate,
+                'selectedTeamMemberId': $("#teamMembersDropdown").find(":selected").val()
+            });
+
+            $.ajax({
+                async: true,
+                url: "@Url.Action("ApplyDateRange", "TeamMembersEmailGraphs")",
+                data: data,
+                type: 'POST',
+                contentType: 'application/json; charset=utf-8',
+                success: function (partialView) {
+                    $('#graphView_Partial_Id').html(partialView);
+                    unblockUI();
+                }
+            });
+            console.log(picker.startDate.format('YYYY-MM-DD'));
+            console.log(picker.endDate.format('YYYY-MM-DD'));
         });
 
         $("#teamMembersDropdown").change(function (e) {
             blockUI();
+
+            var data = JSON.stringify({
+                'model': @Html.Raw(Json.Encode(@Model)),
+                'teamMemberId': $("#teamMembersDropdown").find(":selected").val(),
+            });
+
             e.preventDefault();
-            var teamMemberId = $(this).find(":selected").val();
-            var selectid = { "teamMemberId": teamMemberId };
             $.ajax({
                 async: true,
                 url: "@Url.Action("GetSelectedValue", "TeamMembersEmailGraphs")",
-                data: JSON.stringify(selectid),
+                data: data,
                 type: 'POST',
                 contentType: 'application/json; charset=utf-8',
                 success: function (partialView) {
@@ -52,7 +80,7 @@
                 }
             });
             return false;
-        });
+    });
     });
 </script>
 
