--- a/Thesis/Thesis.Web/Content/custom.css
+++ b/Thesis/Thesis.Web/Content/custom.css
@@ -325,3 +325,80 @@ h1, h2, h3, h4, h5, h6, p {
   padding-left: 30px;
   margin-bottom: 15px; }
 
+.loadingBar {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 600px;
+  background-color: rgba(200, 200, 200, 0.8);
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  opacity: 1; }
+
+.graph-wrapper {
+  position: relative;
+  width: 100%;
+  height: 600px; }
+
+.loading-bar-text {
+  position: absolute;
+  top: 8px;
+  left: 530px;
+  width: 30px;
+  height: 50px;
+  margin: auto auto auto auto;
+  font-size: 22px;
+  color: #000000; }
+
+.outerBorder {
+  position: relative;
+  top: 250px;
+  width: 600px;
+  height: 52px;
+  margin: auto auto auto auto;
+  border: 8px solid rgba(0, 0, 0, 0.1);
+  background: #fcfcfc;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #fcfcfc 0%, #ededed 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fcfcfc), color-stop(100%, #ededed));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #fcfcfc 0%, #ededed 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #fcfcfc 0%, #ededed 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #fcfcfc 0%, #ededed 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #fcfcfc 0%, #ededed 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', endColorstr='#ededed',GradientType=0 );
+  /* IE6-9 */
+  border-radius: 72px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); }
+
+.border {
+  position: absolute;
+  top: 7px;
+  left: 10px;
+  width: 500px;
+  height: 23px;
+  margin: auto auto auto auto;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 10px; }
+
+.bar {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 20px;
+  height: 20px;
+  margin: auto auto auto auto;
+  border-radius: 11px;
+  border: 2px solid rgba(30, 30, 30, 0.05);
+  background: #721549;
+  box-shadow: 2px 0px 4px rgba(0, 0, 0, 0.4); }
+
