commit 2 1.4. pridane diagramy, zmena text

--- a/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/GraphView_partial.cshtml
+++ b/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/GraphView_partial.cshtml
@@ -54,7 +54,7 @@
             var startDate = new Date(picker.startDate);
             var stopDate = new Date(picker.endDate);
 
-            var startMonth = '';
+            var startMonth = "";
             if ((startDate.getMonth() + 1) < 10) {
                 startMonth = '0' + (startDate.getMonth() + 1);
             } else {
