--- a/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/Index.cshtml
+++ b/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/Index.cshtml
@@ -25,7 +25,7 @@
 
             var data = JSON.stringify({
                 'model': @Html.Raw(Json.Encode(@Model)),
-                'teamMemberId': $("#teamMembersDropdown").find(":selected").val(),
+                'teamMemberId': $("#teamMembersDropdown").find(":selected").val()
             });
 
             e.preventDefault();
